add Testimonial in Home

--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
                             </div>
                             <div class="media-body">
                                 <blockquote>Saya menemukan berbagai pengalaman dan ilmu di BugisDev yang belum pernah saya dapatkan di dunia perkuliahan,
-                                    selain itu, disini saya belajar bagaimana cara bekerja dalam tim dan disamping itu saya mendapatkan kekasih di BugisDev.
+                                    selain itu, disini saya belajar bagaimana cara bekerja dalam tim.
                                 </blockquote>
                                 <em><h3>- Nur Yaumi</h3></em>
                             </div>
