change testimoni picture

--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
                         <h2>Testimonial</h2>
                         <div class="media">
                             <div class="pull-left">
-                                <a href="#"><img src="images/home/profile-01.png" alt=""></a>
+                                <a href="#"><img src="images/home/ava-02.png" alt=""></a>
                             </div>
                             <div class="media-body">
                                 <blockquote>Saya menemukan berbagai pengalaman dan ilmu di BugisDev yang belum pernah saya dapatkan di dunia perkuliahan,
@@ -189,7 +189,7 @@
                          </div>
                         <div class="media">
                             <div class="pull-left">
-                                <a href="#"><img src="images/home/profile-02.png" alt=""></a>
+                                <a href="#"><img src="images/home/ava-01.png" alt=""></a>
                             </div>
                             <div class="media-body">
                                 <blockquote>Di BugisDev saya belajar bagaimana memanajemen waktu, menemukan hal baru di dunia pemrograman, teman baru, dan ilmu yang bermanfaat.</blockquote>
