add testimonial section

--- a/index.html
+++ b/index.html
@@ -126,12 +126,10 @@
         <div class="vertical-center">
              <div class="container">
                 <div class="row">
-                    <div class="action take-tour">
                         <div class="col-sm-7 wow fadeInLeft" data-wow-duration="500ms" data-wow-delay="300ms">
                             <h1 class="title">Bugisdev Events</h1>
                             <p>Kegiatan-kegiatan yang diselenggarakan oleh bugisdev.</p>
                         </div>
-                    </div>
                 </div>
             </div>
         </div>
@@ -165,17 +163,23 @@
         </div>
     </section>
      <!--/#features-->
+     <section id="action" class="responsive">
+         <div class="vertical-center">
+             <div class="container">
+                <div class="row">
+                        <div class="col-sm-7 wow fadeInLeft" data-wow-duration="500ms" data-wow-delay="300ms">
+                            <h1 class="title">Testimonial</h1>
+                        </div>
+                </div>
+            </div>
+        </div>
+     </section>
 
-    <footer id="footer">
+     <section id="testimonial">
         <div class="container">
             <div class="row">
-                <div class="col-sm-12 text-center bottom-separator">
-                    <img src="images/home/under-01.png" class="img-responsive inline" alt="">
-                </div>
-
-                <div class="col-md-4 col-sm-6">
+                <div class="col-md-6 col-sm-6 wow fadeInLeft" data-wow-duration="500ms" data-wow-delay="300ms">
                     <div class="testimonial bottom">
-                        <h2>Testimonial</h2>
                         <div class="media">
                             <div class="pull-left">
                                 <a href="#"><img class="img-responsive" src="images/home/ava-02.png" alt=""></a>
@@ -186,7 +190,7 @@
                                 </blockquote>
                                 <em><h3>- Nur Yaumi</h3></em>
                             </div>
-                         </div>
+                        </div>
                         <div class="media">
                             <div class="pull-left">
                                 <a href="#"><img class="img-responsive" src="images/home/ava-01.png" alt=""></a>
@@ -198,8 +202,41 @@
                         </div>   
                     </div> 
                 </div>
+                <div class="col-md-6 col-sm-6 wow fadeInRight" data-wow-duration="500ms" data-wow-delay="300ms">
+                    <div class="testimonial bottom">
+                        <div class="media">
+                            <div class="pull-left">
+                                <a href="#"><img class="img-responsive" src="images/home/ava-03.png" alt=""></a>
+                            </div>
+                            <div class="media-body">
+                                <blockquote> Saya suka belajar di BugisDev. Metode belajarnya berbeda.
+                                </blockquote>
+                                <em><h3>- Dwi Sulfahnur</h3></em>
+                            </div>
+                        </div>
+                        <div class="media">
+                            <div class="pull-left">
+                                <a href="#"><img class="img-responsive" src="images/home/ava-04.png" alt=""></a>
+                            </div>
+                            <div class="media-body">
+                                <blockquote>Sejak di BugisDev, saya mendapat banyak teman dan bisa sharing tentang hal-hal menarik.</blockquote>
+                                <em><h3>- Andika</h3></em>
+                            </div>
+                        </div>   
+                    </div> 
+                </div>
+            </div>
+        </div>
+     </section>
 
-                <div class="col-md-3 col-sm-6">
+    <footer id="footer">
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-12 text-center bottom-separator">
+                    <img src="images/home/under-01.png" class="img-responsive inline" alt="">
+                </div>
+
+                <div class="col-md-6 col-sm-6">
                     <div class="contact-info bottom">
                         <h2>Contacts</h2>
                         <address>
@@ -215,7 +252,7 @@
                         </address>
                     </div>
                 </div>
-                <div class="col-md-4 col-sm-12">
+                <div class="col-md-5 col-sm-12">
                     <div class="contact-form bottom">
                         <h2>Send a message</h2>
                         <form id="main-contact-form" name="contact-form" method="post" action="sendemail.php">
