--- a/index.html
+++ b/index.html
@@ -199,7 +199,16 @@
                                 <blockquote>Di BugisDev saya belajar bagaimana memanajemen waktu, menemukan hal baru di dunia pemrograman, teman baru, dan ilmu yang bermanfaat.</blockquote>
                                 <em><h3>- Alif Firdaus</h3></em>
                             </div>
-                        </div>   
+                        </div>
+                        <div class="media">
+                            <div class="pull-left">
+                                <a href="#"><img class="img-responsive" src="images/home/ava-05.png" alt=""></a>
+                            </div>
+                            <div class="media-body">
+                                <blockquote>BugIsDev adalah salah satu tempat saya belajar dan menemukan hal hal yang baru di dunia pemrograman, termasuk manajemen kode dan deployment.</blockquote>
+                                <em><h3>- Andi Rudini</h3></em>
+                            </div>
+                        </div>     
                     </div> 
                 </div>
                 <div class="col-md-6 col-sm-6 wow fadeInRight" data-wow-duration="500ms" data-wow-delay="300ms">
@@ -221,6 +230,15 @@
                             <div class="media-body">
                                 <blockquote>Sejak di BugisDev, saya mendapat banyak teman dan bisa sharing tentang hal-hal menarik.</blockquote>
                                 <em><h3>- Andika</h3></em>
+                            </div>
+                        </div>
+                        <div class="media">
+                            <div class="pull-left">
+                                <a href="#"><img class="img-responsive" src="images/home/ava-06.png" alt=""></a>
+                            </div>
+                            <div class="media-body">
+                                <blockquote>Di BugisDev saya belajar banyak hal baru, Programming, Scrum, dll. Yang paling penting dan menyenangkan adalah bisa saling share tentang dunia IT.</blockquote>
+                                <em><h3>- Achmad Gozali</h3></em>
                             </div>
                         </div>   
                     </div> 
