--- a/aboutus.html
+++ b/aboutus.html
@@ -166,6 +166,7 @@
                     <ol class="carousel-indicators visible-xs">
                         <li data-target="#team-carousel" data-slide-to="0" class="active"></li>
                         <li data-target="#team-carousel" data-slide-to="1"></li>
+                        <li data-target="#team-carousel" data-slide-to="2"></li>
                     </ol>
                     <!-- Wrapper for slides -->
                     <div class="carousel-inner">
@@ -350,7 +351,7 @@
                                         </div>
                                     </div>
                                     <div class="person-info">
-                                        <h2>Sinar Mustika Ruslan</h2>
+                                        <h2>Sinar Mustika</h2>
                                         <p>Member</p>
                                     </div>
                                 </div>
