--- a/aboutus.html
+++ b/aboutus.html
@@ -31,9 +31,9 @@
                 <div class="col-sm-12 overflow">
                    <div class="social-icons pull-right">
                         <ul class="nav nav-pills">
-                            <li><a href=""><i class="fa fa-facebook"></i></a></li>
+                            <li><a href="https://web.facebook.com/BugisDev/?ref=ts&fref=ts"><i class="fa fa-facebook"></i></a></li>
                             <li><a href=""><i class="fa fa-twitter"></i></a></li>
-                            <li><a href=""><i class="fa fa-github"></i></a></li>
+                            <li><a href="https://github.com/BugisDev"><i class="fa fa-github"></i></a></li>
                         </ul>
                     </div> 
                 </div>
